# idp-brain

./: .env.example  .gitignore  .yamllint.yaml  AGENTS.md  ARCHITECTURE.md  README.md  REMARKS.md  docker-compose.yaml  mise.macos.toml  mise.toml  prek.toml  pyproject.toml  renovate.json  skills-lock.json
.agents/skills/coding/: SKILL.md
.codex/: config.toml
.codex/agents/: coder.toml  database_specialist.toml  deep_reviewer.toml  explorer.toml  implementer.toml  product-owner.toml  retrieval_specialist.toml  reviewer.toml  security_specialist.toml  technical_planner.toml  test_specialist.toml  verifier.toml
.github/workflows/: ci.yaml
config/: access.yaml  evaluation.yaml  extractors.yaml  memory.yaml  models.yaml  retrieval.yaml  security.yaml  sources.yaml  weaviate.yaml
migrations/: env.py  script.py.mako
migrations/versions/: 0001_enable_extensions.py  0002_core_data_model.py  0003_corpus_eligibility_metadata.py  0004_redaction_license_events.py  0005_index_versions_embedding_jobs.py  0006_ingestion_run_status_fields.py  0007_git_source_changes.py  0008_artifact_corpus_eligibility.py  0009_redaction_event_policy_labels.py  0010_chunk_citation_provenance.py  0011_incremental_membership_fields.py  0012_embedding_jobs_and_vectors.py  0013_chunks_bm25_index.py  0014_embeddings_hnsw_index.py  0015_chunks_exact_lookup_indexes.py
plans/mvp/: README.md
plans/mvp/01-skeleton-and-local-runtime/: 01-python-project-scaffold.md  02-mise-task-runner.md  03-lint-type-test-tooling.md  04-docker-compose-postgres.md  05-pydantic-settings-and-env-example.md  06-alembic-base-and-extension-migration.md  07-extension-smoke-test.md  08-github-actions-ci.md
plans/mvp/02-configuration-and-data-model/: 01-config-loader-models.md  02-example-config-files.md  03-core-sqlalchemy-models.md  04-access-policy-models.md  04-corpus-eligibility-policy-models.md  05-redaction-and-license-models.md  06-index-versions-and-embedding-jobs.md  07-db-mise-tasks.md  08-model-and-migration-tests.md
plans/mvp/03-ingestion-and-sanitized-storage/: 01-sources-list-command.md  02-ingestion-run-recording.md  03-local-directory-ingestion.md  04-git-repository-fetcher.md  05-artifact-discovery.md  06-extractor-interfaces-and-basic-extractors.md  07-redaction-before-persistence.md  10-ingestion-test-suite.md  (+2 more)
src/idp_brain/: __init__.py  cli.py  db.py  retrieval_field_sets.py  settings.py  weaviate_admin.py  weaviate_reset.py  weaviate_slice.py
tests/: conftest.py  test_artifact_discovery.py  test_basic_extractors.py  test_cli_smoke.py  test_config_loader.py  test_core_models.py  test_corpus_eligibility_models.py  test_example_configs.py  test_git_repository_fetcher.py  test_incremental_ingestion_and_tombstones.py  test_index_embedding_models.py  test_ingestion_run_recording.py  test_local_directory_ingestion.py  test_migration_upgrade.py  test_mise_db_tasks.py  test_model_metadata.py  test_redaction_before_persistence.py  test_redaction_license_models.py  test_schema_safety_contracts.py  test_settings.py  test_sources_list_command.py  test_structure_aware_chunking.py  test_weaviate_reset.py  test_weaviate_slice.py
tests/cli/: test_ingest_commands.py
tests/config/: test_models_config.py  test_retrieval_config.py  test_validate_module.py  test_weaviate_config.py
tests/db/: __init__.py  test_embedding_migration.py  test_exact_lookup_indexes.py  test_paradedb_bm25_migration.py  test_pgvector_hnsw_migration.py
tests/embeddings/: test_embedding_jobs.py  test_embedding_provider_interface.py  test_mock_embedding_provider.py  test_query_embedding.py  test_vector_storage.py
tests/ingestion/: __init__.py  conftest.py  test_artifact_discovery.py  test_chunking.py  test_database_migrations.py  test_extractors.py  test_git_repository.py  test_incremental_tombstones.py  test_ingestion_runs.py  test_local_directory.py  test_public_path_and_manual_stage_composition.py  test_redaction_safety.py  test_sources_list.py
tests/integration/: test_migrations_smoke.py  test_postgres_extensions.py  test_weaviate_vertical_slice.py
tests/reranking/: test_mock_reranker.py  test_reranker_interface.py
tests/retrieval/: test_bm25_extension_smoke.py  test_bm25_retrieval.py  test_bm25_sql.py  test_corpus_eligibility_filtering.py  test_evidence_bundle_contract.py  test_evidence_bundle_snapshots.py  test_exact_lookup.py  test_filtering_before_subqueries.py  test_hybrid_retrieval_service.py  test_query_profiles.py  test_reciprocal_rank_fusion.py  test_reranking_integration.py  test_vector_extension_smoke.py  test_vector_retrieval.py  test_vector_sql.py
(+206 files in other folders)
