[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "idp-brain"
description = "Local-first source-backed retrieval pipeline scaffold."
requires-python = ">=3.12,<3.13"
dynamic = ["version"]
dependencies = [
    "alembic",
    "pydantic-settings",
    "psycopg>=3,<4",
    "rich",
    "sqlalchemy>=2,<3",
    "typer",
]

[project.scripts]
idp-brain = "idp_brain.cli:app"

[dependency-groups]
dev = [
    "mypy",
    "pytest",
    "pytest-cov",
    "ruff",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.dynamic]
version = {attr = "idp_brain.__version__"}

[tool.ruff]
target-version = "py312"
src = ["src", "tests"]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.12"
files = ["src/idp_brain"]
disallow_untyped_defs = true
warn_unused_ignores = true
warn_redundant_casts = true
no_implicit_optional = true
warn_return_any = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = [
    "--cov=idp_brain",
    "--cov-report=term-missing",
]
markers = [
    "integration: tests that require external local services such as PostgreSQL",
]
