[build-system]
requires = ["setuptools>=83,<84", "wheel>=0.47,<0.48"]
build-backend = "setuptools.build_meta"

[project]
name = "idp-brain"
description = "Local-first source-backed retrieval pipeline scaffold."
requires-python = ">=3.14,<3.15"
dynamic = ["version"]
dependencies = [
    "alembic>=1.18.5,<2",
    "pydantic-settings>=2.14.2,<3",
    "psycopg>=3.3.4,<4",
    "rich>=15.0.0,<16",
    "sqlalchemy>=2.0.51,<3",
    "typer>=0.26.8,<1",
]

[project.scripts]
idp-brain = "idp_brain.cli:app"

[dependency-groups]
dev = [
    "mypy>=2.1.0,<3",
    "pytest>=9.1.1,<10",
    "pytest-cov>=7.1.0,<8",
    "ruff>=0.15.20,<0.16",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.dynamic]
version = {attr = "idp_brain.__version__"}

[tool.ruff]
target-version = "py314"
src = ["src", "tests"]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.14"
files = ["src/idp_brain"]
disallow_untyped_defs = true
warn_unused_ignores = true
warn_redundant_casts = true
no_implicit_optional = true
warn_return_any = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = [
    "--cov=idp_brain",
    "--cov-report=term-missing",
]
markers = [
    "integration: tests that require external local services such as PostgreSQL",
]
