[build-system]
requires = ["setuptools>=83,<84", "wheel>=0.47,<0.48"]
build-backend = "setuptools.build_meta"

[project]
name = "idp-brain"
description = "Local-first source-backed retrieval pipeline scaffold."
requires-python = ">=3.14,<3.15"
dynamic = ["version"]
dependencies = [
    "alembic>=1.18.5,<2",
    "beautifulsoup4>=4.14.2,<5",
    "jsonschema>=4.25.1,<5",
    "lxml>=6.0.2,<7",
    "markdown-it-py>=4.0.0,<5",
    "openapi-spec-validator>=0.8.0b1,<0.9",
    "pydantic>=2.13.4,<3",
    "pydantic-settings>=2.14.2,<3",
    "psycopg>=3.3.4,<4",
    "pgvector>=0.4,<0.5",
    "PyYAML>=6.0.3,<7",
    "rich>=15.0.0,<16",
    "sqlalchemy>=2.0.51,<3",
    "tree-sitter>=0.25.2,<0.26",
    "tree-sitter-python>=0.25.0,<0.26",
    "typer>=0.26.8,<1",
]

[project.scripts]
idp-brain = "idp_brain.cli:app"

[dependency-groups]
dev = [
    "pyflakes>=3.4.0",
    "pytest>=9.1.1,<10",
    "pytest-cov>=7.1.0,<8",
    "ruff>=0.15.21,<0.16",
    "ty>=0.0.58,<0.0.59",
    "types-jsonschema>=4.25.1,<5",
    "types-PyYAML>=6.0.12,<7",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.dynamic]
version = {attr = "idp_brain.__version__"}

[tool.ruff]
target-version = "py314"
src = ["src", "tests"]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
extend-select = ["ANN", "PYI"]
ignore = ["ANN401"]
preview = true

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["ANN"]

[tool.ty.environment]
python-version = "3.14"

[tool.ty.src]
include = ["src/idp_brain"]

[tool.ty.rules]
missing-type-argument = "error"
possibly-unresolved-reference = "warn"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = [
    "--cov=idp_brain",
    "--cov-report=term-missing",
]
markers = [
    "integration: tests that require external local services such as PostgreSQL",
    "requires_pg_search: tests that require ParadeDB pg_search BM25 support",
    "requires_pgvector: tests that require pgvector ANN/vector-distance support",
]
